<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/botton_nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/botton_nav_report"
        android:enabled="true"
        android:icon="@drawable/ic_nav_reports"
        android:title="@string/nav_reports"/>
    <item
        android:id="@+id/bottom_nav_appointment"
        android:enabled="true"
        android:icon="@drawable/ic_nav_appointment"
        android:title="@string/nav_appointment"/>
    <item
        android:id="@+id/bottom_nav_pharmacy"
        android:enabled="false"
        android:visible="false"
        android:icon="@drawable/ic_nav_pharmacy"
        android:title="@string/nav_pharmacy"/>
    <item
        android:id="@+id/bottom_nav_account"
        android:enabled="true"
        android:icon="@drawable/ic_nav_account"
        android:title="@string/nav_account"/>
</menu>